--- a/RemoteTech_Stock.cfg
+++ b/RemoteTech_Stock.cfg
@@ -24,6 +24,218 @@ PART{
 	description = Allows RemoteTech probe cores to contact ships within 3 km without the need for a dedicated antenna.
 }
 
+remotetech antennas configs:		----------------------------------------
+
+@PART[RTShortAntenna1]
+{
+	%TechRequired = start
+	
+	%MODULE[ModuleRTAntenna] {
+		%IsRTActive = true
+		%Mode0OmniRange = 0
+		%Mode1OmniRange = 500000
+		%EnergyCost = 0.01
+		
+		%TRANSMITTER {
+			%PacketInterval = 0.3
+			%PacketSize = 2
+			%PacketResourceCost = 15.0
+		}
+	}
+	
+	%MODULE[ModuleSPUPassive] {}
+}
+
+@PART[RTLongAntenna2]
+{
+	%TechRequired = largeElectrics
+	
+	@MODULE[ModuleAnimateGeneric]
+	{
+		%allowManualControl = false
+		%actionAvailable = false
+		%eventAvailableFlight = false
+		%eventAvailableEditor = false
+		%eventAvailableEVA = false
+	}
+	
+	%MODULE[ModuleRTAntenna] {
+		%Mode0OmniRange = 0
+		%Mode1OmniRange = 5000000
+		%MaxQ = 3000
+		%EnergyCost = 0.6
+		
+		%DeployFxModules = 0
+		
+		%TRANSMITTER {
+			%PacketInterval = 0.3
+			%PacketSize = 2
+			%PacketResourceCost = 15.0
+		}
+	}
+	
+	%MODULE[ModuleSPUPassive] {}
+}
+
+@PART[RTLongAntenna3]
+{
+	%TechRequired = specializedElectrics
+	
+	@MODULE[ModuleAnimateGeneric]
+	{
+		%allowManualControl = false
+		%actionAvailable = false
+		%eventAvailableFlight = false
+		%eventAvailableEditor = false
+		%eventAvailableEVA = false
+	}
+	
+	%MODULE[ModuleRTAntenna] {
+		%Mode0OmniRange = 0
+		%Mode1OmniRange = 3000000
+		%MaxQ = 6000
+		%EnergyCost = 0.18
+		
+		%DeployFxModules = 0
+		
+		%TRANSMITTER {
+			%PacketInterval = 0.3
+			%PacketSize = 2
+			%PacketResourceCost = 15.0
+		}
+	}
+	
+	%MODULE[ModuleSPUPassive] {}
+}
+
+@PART[RTShortDish1]
+{
+	%MODULE[ModuleRTAntenna] {
+		%Mode0DishRange = 0
+		%Mode1DishRange = 90000000
+		%EnergyCost = 0.82
+		%DishAngle = 25.0
+		
+		%TRANSMITTER {
+			%PacketInterval = 0.3
+			%PacketSize = 2
+			%PacketResourceCost = 15.0
+		}
+	}
+	
+	%MODULE[ModuleSPUPassive] {}
+}
+
+@PART[RTShortDish2]
+{
+	%TechRequired = electrics
+	
+	%MODULE[ModuleRTAntenna] {
+		%Mode0DishRange = 0
+		%Mode1DishRange = 90000000
+		%EnergyCost = 0.82
+		%DishAngle = 25.0
+		
+		%TRANSMITTER {
+			%PacketInterval = 0.3
+			%PacketSize = 2
+			%PacketResourceCost = 15.0
+		}
+	}
+	
+	%MODULE[ModuleSPUPassive] {}
+}
+
+@PART[RTLongDish1]
+{
+	%MODULE[ModuleRTAntenna] {
+		%Mode0DishRange = 0
+		%Mode1DishRange = 60000000000
+		%EnergyCost = 0.93
+		%DishAngle = 0.04
+		
+		%TRANSMITTER {
+			%PacketInterval = 0.3
+			%PacketSize = 2
+			%PacketResourceCost = 15.0
+		}
+	}
+	
+	%MODULE[ModuleSPUPassive] {}
+}
+
+@PART[RTLongDish2]
+{
+	%TechRequired = largeElectrics
+	
+	%MODULE[ModuleRTAntenna] {
+		%Mode0DishRange = 0
+		%Mode1DishRange = 60000000000
+		%EnergyCost = 0.93
+		%DishAngle = 0.04
+		
+		%TRANSMITTER {
+			%PacketInterval = 0.3
+			%PacketSize = 2
+			%PacketResourceCost = 15.0
+		}
+	}
+	
+	%MODULE[ModuleSPUPassive] {}
+}
+
+@PART[RTGigaDish1]
+{
+	%TechRequired = advScienceTech
+	
+	@MODULE[ModuleAnimateGeneric]
+	{
+		%allowManualControl = false
+		%actionAvailable = false
+		%eventAvailableFlight = false
+		%eventAvailableEditor = false
+		%eventAvailableEVA = false
+	}
+	
+	%MODULE[ModuleRTAntenna] {
+		%Mode0DishRange = 0
+		%Mode1DishRange = 400000000000
+		%EnergyCost = 2.80
+		%MaxQ = 6000
+		%DishAngle = 0.005
+		
+		%DeployFxModules = 0
+		
+		%TRANSMITTER {
+			%PacketInterval = 0.3
+			%PacketSize = 2
+			%PacketResourceCost = 15.0
+		}
+	}
+	
+	%MODULE[ModuleSPUPassive] {}
+}
+
+@PART[RTGigaDish2]
+{
+	%TechRequired = specializedElectrics
+	
+	%MODULE[ModuleRTAntenna] {
+		%Mode0DishRange = 0
+		%Mode1DishRange = 350000000000
+		%EnergyCost = 2.60
+		%DishAngle = 0.006
+		
+		%TRANSMITTER {
+			%PacketInterval = 0.3
+			%PacketSize = 2
+			%PacketResourceCost = 15.0
+		}
+	}
+	
+	%MODULE[ModuleSPUPassive] {}
+}
+
 //edit crewed parts:				----------------------------------------
 
 @PART[mk3Cockpit_Shuttle]	{!MODULE[ModuleDataTransmitter]{}}
