--- a/RemoteTech_Stock.cfg
+++ b/RemoteTech_Stock.cfg
@@ -238,17 +238,10 @@ remotetech antennas configs:		----------------------------------------
 
 //edit crewed parts:				----------------------------------------
 
-@PART[mk3Cockpit_Shuttle]	{!MODULE[ModuleDataTransmitter]{}}
-@PART[mk2LanderCabin]		{!MODULE[ModuleDataTransmitter]{}}
-@PART[mk2Cockpit_Standard]	{!MODULE[ModuleDataTransmitter]{}}
-@PART[mk2Cockpit_Inline]	{!MODULE[ModuleDataTransmitter]{}}
-@PART[mk1pod]				{!MODULE[ModuleDataTransmitter]{}}
-@PART[landerCabinSmall]		{!MODULE[ModuleDataTransmitter]{}}
-@PART[Mark1Cockpit]			{!MODULE[ModuleDataTransmitter]{}}
-@PART[MK1CrewCabin]			{!MODULE[ModuleDataTransmitter]{}}
-@PART[Mark2Cockpit]			{!MODULE[ModuleDataTransmitter]{}}
-@PART[Mark1-2Pod]			{!MODULE[ModuleDataTransmitter]{}}
-@PART[cupola]				{!MODULE[ModuleDataTransmitter]{}}
+@PART[mk3Cockpit_Shuttle,mk2LanderCabin,mk2Cockpit_Standard,mk2Cockpit_Inline,mk1pod,landerCabinSmall,Mark1Cockpit,MK1CrewCabin,Mark2Cockpit,Mark1-2Pod,cupola]
+{
+	!MODULE[ModuleDataTransmitter]{}
+}
 
 //edit launchClamp1:				----------------------------------------
 
